# src/api/types.ts
@@ -26,6 +26,7 @@ export type HourLogInput = Schemas['HourLogInput']
 export type ApprovalStatus = Schemas['ApprovalStatus']
 export type DocumentRequirement = Schemas['DocumentRequirement']
 export type DocumentRequirementInput = Schemas['DocumentRequirementInput']
+export type DocumentRequirementPatch = Schemas['DocumentRequirementPatch']
 export type DocumentUpload = Schemas['DocumentUpload']
 export type DocumentUploadInput = Schemas['DocumentUploadInput']
 export type Certificate = Schemas['Certificate']
